Closed Bug 377514 Opened 19 years ago Closed 19 years ago

AT-SPI focus events no longer being generated

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070413 Minefield/3.0a4pre Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070413 Minefield/3.0a4pre AT-SPI events are no longer being generated when a menu gets focus or when selection changes within the menu. Reproducible: Always Steps to Reproduce: 1. Launch AT-POKE or Accerciser and turn event monitoring on 2. Launch Firefox 3. Press Alt F to get into the File menu and then use Up/Down Arrow to navigate among the items Actual Results: No events are generated to inform the AT that focus is in the menu and that the selected item is changing. Expected Results: Events would be generated to inform the AT that focus is in the menu and that the selected item is changing. This seems to have been introduced in build Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070413 Minefield/3.0a4pre or perhaps the build immediately prior.
Blocks: orca
Keywords: access, sec508
To confirm when it was introduced: It was NOT an issue in Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070412 Minefield/3.0a4pre It seems to have been introduced by: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070413 Minefield/3.0a4pre
Keywords: regression
I'm not seeing any MSAA focus events in current trunk at all. Joanmarie, are you sure the problem you're seeing is limited to menus?
> Joanmarie, are you sure the problem you're seeing is limited to menus? No, I'm not sure. But unfortunately the stability issues from the past couple of days have made more thorough testing a challenge. :-( So I filed the bug specific to the one thing I knew for certain. We seem to still get the same events from the HTML content with the exception of combo boxes (whose child is a menu) and lists in forms (whose children are menu items). Most dialog boxes are crashing Firefox on my machines, but the Customize Toolbar dialog isn't. There, I'm still getting state-changed:focused events as I Tab among objects and state-changed:checked events when I toggle the state of the "Use Small Icons" check box. I am not getting events as I arrow up/down within the Show combo box, but, again, the child of the combo box is a menu.... I just gave the History panel a shot and got similar results: state-changed:focused events as I moved among the items, caret-moved events within the Search entry. The menu that appears when you press the View button is (not suprisingly) event-less. The tree of sites does generate a state-changed:focused event when it gains focus, but arrowing Up/Down in the tree does not generate events. So it *looks* like it's menus and trees. Hope this helps!
I tested on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070414 Minefield/3.0a4pre There is no focus event at all, not only for menus, but for everything, except sometimes I can see a focus event for document frame.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: AT-SPI events no longer being generated for menus → AT-SPI events no longer being generated
Summary: AT-SPI events no longer being generated → AT-SPI focus events no longer being generated
I think it's regression of bug 377037. Events are not redirected to doc accessible where platform events are fired.
Assignee: aaronleventhal → surkov.alexander
Attached patch patchSplinter Review
Evan, can I ask you to test this on linux?
Attachment #261600 - Flags: review?(Evan.Yan)
Attachment #261600 - Flags: review?(Evan.Yan) → review+
committed.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: