Bug 377514 AT-SPI focus events no longer being genratedpatch by alexender.surkov review=ginn.chen