accessible/src/atk/nsDocAccessibleWrap.h
@@ -56,7 +56,6 @@ public:
 
   NS_IMETHOD FireToolkitEvent(PRUint32 aEvent, nsIAccessible* aAccessible,
                               void* aData);
-  NS_IMETHOD FireAccessibleEvent(nsIAccessibleEvent *aEvent);
 
 protected:
   PRBool mActivated;
