accessible/src/base/nsAccessible.cpp
@@ -1969,14 +1969,16 @@ nsresult nsAccessible::GetXULName(nsAString& aLabel, PRBool aCanAggregateSubtree
 
 NS_IMETHODIMP nsAccessible::FireToolkitEvent(PRUint32 aEvent, nsIAccessible *aTarget, void * aData)
 {
-  // Don't fire event for accessible that has been shut down.
-  NS_ENSURE_TRUE(mWeakShell, NS_ERROR_FAILURE);
+  // Don't fire event for accessible that has been shut down
+  if (!mWeakShell)
+    return NS_ERROR_FAILURE;
 
-  nsCOMPtr<nsIAccessibleEvent> accEvent =
-    new nsAccEvent(aEvent, aTarget, aData);
-  NS_ENSURE_TRUE(accEvent, NS_ERROR_OUT_OF_MEMORY);
+  nsCOMPtr<nsIAccessibleDocument> docAccessible(GetDocAccessible());
+  nsCOMPtr<nsPIAccessible> eventHandlingAccessible(do_QueryInterface(docAccessible));
+  if (eventHandlingAccessible)
+    return eventHandlingAccessible->FireToolkitEvent(aEvent, aTarget, aData);
 
-  return FireAccessibleEvent(accEvent);
+  return NS_ERROR_FAILURE;
 }
 
 NS_IMETHODIMP
