accessible/src/base/nsDocAccessible.h
@@ -91,6 +91,9 @@ class nsDocAccessible : public nsHyperTextAccessible,
     // nsIDocumentObserver
     NS_DECL_NSIDOCUMENTOBSERVER
 
+    NS_IMETHOD FireToolkitEvent(PRUint32 aEvent, nsIAccessible* aAccessible,
+                                void* aData);
+
     static void FlushEventsCallback(nsITimer *aTimer, void *aClosure);
 
     // nsIAccessNode
